--- a/style.css
+++ b/style.css
@@ -101,14 +101,67 @@ body {
 }
 
 .projects {
+  width: 100%;
   min-height: 100vh;
   background-color: #111111;
   color: #eeeeee;
 }
 
-.projects .tittle {
-  width: 100%;
+.tittle {
   text-align: center;
   padding: 70px 0 20px;
   font-size: 2.4rem;
+}
+
+.contact {
+  width: 100%;
+  min-height: 100vh;
+}
+
+.project-tile {
+  height: 80vh;
+  width: 80%;
+  margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.project-tile a {
+  text-decoration: none;
+}
+
+.project {
+  width: 100%;
+  height: 200px;
+  background-color: #333333;
+  border-radius: 5px;
+  transition: 0.5s transform;
+}
+
+.project:hover {
+  transform: scale(1.01);
+}
+
+.project h1 {
+  width: 100%;
+  height: 150px;
+  color: #111111;
+  background-color: #eeeeee;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  font-size: 2.2rem;
+}
+
+.project p {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  font-weight: 500;
+  font-size: 1.3rem;
+  color: #eeeeee;
 }
