--- a/style.css
+++ b/style.css
@@ -113,11 +113,6 @@ body {
   font-size: 2.4rem;
 }
 
-.contact {
-  width: 100%;
-  min-height: 100vh;
-}
-
 .project-tile {
   height: 80vh;
   width: 80%;
@@ -164,4 +159,42 @@ body {
   font-weight: 500;
   font-size: 1.3rem;
   color: #eeeeee;
+}
+
+.contact {
+  width: 80%;
+  min-height: 100vh;
+  margin: 0 auto;
+}
+
+.sm-tile {
+  margin-top: 75px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 75px;
+}
+
+.grid {
+  display: grid;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.3s;
+  text-align: center;
+}
+
+.grid:hover {
+  background-color: #111111;
+  color: #eeeeee;
+}
+
+.fab {
+  font-size: 2.4rem;
+  padding: 30px;
+}
+
+.grid p {
+  font-size: 1.2rem;
+  font-weight: 500;
 }
