--- a/style.css
+++ b/style.css
@@ -175,6 +175,11 @@ body {
   gap: 75px;
 }
 
+.sm-tile a {
+  text-decoration: none;
+  color: #111111;
+}
+
 .grid {
   display: grid;
   justify-content: center;
@@ -197,4 +202,57 @@ body {
 .grid p {
   font-size: 1.2rem;
   font-weight: 500;
+}
+
+.project-tablet {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  .textBox {
+    text-align: left;
+  }
+
+  .openButton,
+  .closeButton {
+    display: none;
+  }
+
+  .nav-links {
+    position: static;
+    transform: translateX(0);
+    align-items: center;
+    background-color: transparent;
+    width: 40%;
+  }
+
+  .nav-links ul {
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+  }
+
+  .nav-links a {
+    color: #111111;
+    padding: 0;
+  }
+
+  .project-tablet {
+    display: block;
+  }
+
+  .project-tile {
+    height: 80vh;
+    width: 80%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+  }
 }
